--- a/Angular/07-student-http-app/src/app/components/students/student-details/student-details.html
+++ b/Angular/07-student-http-app/src/app/components/students/student-details/student-details.html
@@ -1,1 +1,29 @@
-<h2>student-details works!</h2>
+<div *ngIf="loading">
+  <h3>Loading student details...</h3>
+</div>
+
+<div *ngIf="error">
+  <p class="text-danger">{{ error }}</p>
+</div>
+
+<div *ngIf="student">
+  <h2>Student Details</h2>
+  <table class="table table-bordered">
+    <tr>
+      <th>ID</th>
+      <td>{{ student.id }}</td>
+    </tr>
+    <tr>
+      <th>Name</th>
+      <td>{{ student.name }}</td>
+    </tr>
+    <tr>
+      <th>Email</th>
+      <td>{{ student.email }}</td>
+    </tr>
+    <tr>
+      <th>Age</th>
+      <td>{{ student.age }}</td>
+    </tr>
+  </table>
+</div>
